--- a/CPSC581.html
+++ b/CPSC581.html
@@ -138,7 +138,7 @@
               </div>
 
               <div class="col col-md-8 col-12">
-                <img src="./imgs/cpsc581/p0/sketch01.JPG" class="img-fluid rounded">
+                <img src="/imgs/cpsc581/p0/sketch01.JPG" class="img-fluid rounded">
               </div>
 
 
@@ -149,14 +149,14 @@
 
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch02.JPG" class="img-fluid rounded">
+                <img src="/imgs/cpsc581/p0/sketch02.JPG" class="img-fluid rounded">
               </div>
               <!-- <div class="col col-md-3 col-12">
                 <img src="./imgs/cpsc581/p0/sketch07.jpg" class="img-fluid rounded">
               </div> -->
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch04.JPG" class="img-fluid rounded">
+                <img src="/imgs/cpsc581/p0/sketch04.JPG" class="img-fluid rounded">
               </div>
 
             </div>
@@ -175,14 +175,14 @@
 
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketch06.JPG" class="figure-img img-fluid rounded">
+                  <img src="/imgs/cpsc581/p0/sketch06.JPG" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> For this idea, I wanted to have a graphical representation of Homer, that would respond to the beer bottle / donut from being interacted with. The bottle or donut would be clicked and Homer would respond with a phrase depending on how much had been clicked so far. </figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketchMichaela.jpg" class="figure-img img-fluid rounded">
+                  <img src="/imgs/cpsc581/p0/sketchMichaela.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
                 </figure>
 
@@ -190,14 +190,14 @@
 
               <div class="col col-md-6 col-12">
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketch05.jpg" class="figure-img img-fluid rounded">
+                  <img src="/imgs/cpsc581/p0/sketch05.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> This was an idea I had for a more simplistic representation, with the center donut being the only interaction. Once clicked, more donuts would appear below (using physics effects to have them move around). As the mountain of donuts grew, Homer's phrases would sound off at different times.</figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketchAndie.jpg" class="figure-img img-fluid rounded">
+                  <img src="/imgs/cpsc581/p0/sketchAndie.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketches by Andie)</figcaption>
                 </figure>
 
@@ -222,7 +222,7 @@
 
               <div class="col col-md-6 col-12">
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketchAhmad.jpg" class="figure-img img-fluid rounded">
+                  <img src="/imgs/cpsc581/p0/sketchAhmad.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Ahmad)</figcaption>
                 </figure>
               </div>
