Added download link

--- a/CPSC581.html
+++ b/CPSC581.html
@@ -284,6 +284,7 @@
           </div>
           <div class="modal-footer">
             <!-- Button opens new page showing repository -->
+            <a class="btn btn-secondary"href="https://drive.google.com/file/d/1WffXnfhrfKgr9-WLdjpNpfqMFg-CpRUN/view" target="_blank"> Download the Project</a>
             <a class="btn btn-secondary"href="https://github.com/olsakova/homerbutton" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
