--- a/CPSC581.html
+++ b/CPSC581.html
@@ -217,7 +217,7 @@
             <div class="row">
               <div class="col col-md-6 col-12">
 
-                <p> After everyone created additional sketches, we met together and brainstormed additional ideas and came to a consensus on what we were going to create. We wanted to represent Homer without showing him in the scene, so we decided to depict him in two different iconic scenarios, which would clue user quickly as to whom the character is. There a different interaction in each scene, the donut and the beer, that trigger animations and phrases from Homer. </p>
+                <p> After everyone created additional sketches, we met together and brainstormed additional ideas and came to a consensus on what we were going to create. We wanted to represent Homer without showing him in the scene, so we decided to depict him in two different iconic scenarios, which would clue-in users quickly as to whom the character is. There's a different interaction in each scene, the donut and the beer, that trigger animations and phrases from Homer. </p>
               </div>
 
               <div class="col col-md-6 col-12">
