--- a/projects.html
+++ b/projects.html
@@ -41,15 +41,25 @@
     </div>
 
     <!-- Main Navigation Bar  -->
+    <!-- Main Navigation Bar  -->
     <div class="container-fluid ">
-      <div class="row d-flex justify-content-center">
-        <nav class="d-flex justify-content-center nav">
-          <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
-          <a class="nav-link h4 text-primary disabled border-bottom" id="projects-Button"> <span id="currently-Selected-Tab">Projects</span></a>
-        </nav>
-        <nav class="d-flex justify-content-center nav">
-          <a class="nav-link h4 text-primary" id="contact-Button">Contact</a>
-        </nav>
+      <div class="d-flex">
+
+        <div class="flex-grow-1">
+        </div>
+
+        <div>
+          <nav class="d-flex justify-content-center nav">
+            <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
+            <a class="nav-link h4 text-primary disabled border-bottom" id="projects-Button"> <span id="currently-Selected-Tab">Projects</span></a>
+            <a class="nav-link h4 text-primary" id="contact-Button">Contact</a>
+          </nav>
+        </div>
+        <div class="flex-grow-1">
+          <nav id="cpsc581nav" class="px-4">
+            <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
+          </nav>
+        </div>
       </div>
     </div>
     <br>
