--- a/contact.html
+++ b/contact.html
@@ -49,15 +49,24 @@
 
       <!-- Main Navigation Bar  -->
       <div class="container-fluid ">
-        <div class="row d-flex justify-content-center">
-          <nav class="d-flex justify-content-center nav">
-            <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
-            <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
-          </nav>
-          <nav class="d-flex justify-content-center nav">
-            <a class="nav-link h4 text-primary border-bottom" id="contact-Button"><span id="currently-Selected-Tab">Contact</span></a>
-            <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
-          </nav>
+        <div class="d-flex">
+
+          <div class="flex-grow-1">
+          </div>
+
+          <div>
+            <nav class="d-flex justify-content-center nav">
+              <a class="nav-link h4 text-primary" id="home-Button">Overview</a>
+              <a class="nav-link h4 text-primary" id="projects-Button">Projects</a>
+              <a class="nav-link h4 text-primary border-bottom" id="contact-Button"><span id="currently-Selected-Tab">Contact</span></a>
+            </nav>
+          </div>
+
+          <div class="flex-grow-1">
+            <nav id="cpsc581nav" class="px-4">
+              <a class="nav-link h4 text-primary" id="cpsc581-Button">CPSC 581</a>
+            </nav>
+          </div>
         </div>
       </div>
 
