--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <p>This is a paragraph</p>
         </div>
         <div class="col col-md-6 col-lg-5 col-12">
-          <img src="./imgs/ZachAlbers.jpg" class="img-fluid rounded">
+          <img src="./imgs/ZachAlbers2.JPG" class="img-fluid rounded">
         </div>
       </div>
     </div>
