--- a/CPSC581.html
+++ b/CPSC581.html
@@ -86,9 +86,8 @@
 
 
         <div class="row">
-          <div class="col col-md-6 col-12">
 
-          </div>
+          <!--Project 0  -->
           <div class="col col-md-6 col-12">
             <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
               <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
@@ -103,6 +102,37 @@
 
                   <!-- Project: Brief Descrption -->
                   <p class="card-text"> A 'button' that was developed based on the characteristics and iconic traits of Homer Simpson. Built with JavaScript.</p>
+                </div>
+
+                <!--Project Tags  -->
+                <div class="card-footer">
+                  <!-- Web Developement Tag with Popover  -->
+                  <button type="button" class="btn btn-primary disabled btn-sm web-development-btn" style="font-size : 0.6rem" data-container="body" data-toggle="popover" data-placement="top" data-content="Click the Projects tab to see related projects">Web Development</button>
+                  <!-- UI Design Tag  -->
+                  <button name="ui-design" type="button" class="btn btn-primary disabled btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 1 -->
+          <div class="col col-md-6 col-12">
+            <div class="col-md d-flex justify-content-center align-items-center project ios-project web-dev-project mb-5">
+              <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+                <div class="card-body" data-toggle="modal" data-target="#project1Card">
+
+                  <!-- Project: Image  -->
+                  <div class="text-center">
+                    <img src="./imgs/cpsc581/p1/MusicNote9.png" class="img-fluid">
+                  </div>
+
+
+                  <br>
+                  <!-- Project: Title  -->
+                  <h5 class="card-title">Project 1: Creative Unlock Apps</h5>
+
+                  <!-- Project: Brief Descrption -->
+                  <p class="card-text"> Two different iOS apps that each simulate a creative way to unlock your phone. Developed using Xcode and Swift.  </p>
                 </div>
 
                 <!--Project Tags  -->
@@ -308,6 +338,222 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="project1Card" tabindex="-1" role="dialog" aria-labelledby="modalLabel1" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h2 class="modal-title" id="modalLabel1">Project 1: Creative Unlock Apps</h2>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+            <br>
+
+
+            <!-- Design -->
+            <div class="row">
+
+              <div class="col col-md-5 col-12">
+                <h4>Initial Sketches:</h4>
+                <p>     Just as in project 0, for this project we started with every group member sketching 10 different ideas for creative ways to unlock your phone. We had to think of ideas that would work by touching the phone and ones that would work using the sensors on the device. My initial designs can be seen here.  </p>
+
+                <img src="./imgs/cpsc581/p1/sketch02.JPG" class="img-fluid rounded">
+              </div>
+
+              <div class="col col-md-7 col-12">
+                <img src="./imgs/cpsc581/p1/sketch01.JPG" class="img-fluid rounded">
+              </div>
+
+
+            </div>
+            <br>
+
+            <div class="row d-flex">
+
+
+              <div class="col col-md-6 col-12">
+                <img src="./imgs/cpsc581/p1/sketch03.JPG" class=" figure-img img-fluid rounded" width="300">
+                <br>
+                <br>
+                <img src="./imgs/cpsc581/p1/sketch05.JPG" class="img-fluid rounded">
+                <br>
+                <br>
+                <img src="./imgs/cpsc581/p1/sketch07.JPG" class="img-fluid rounded">
+              </div>
+
+              <div class="col col-md-6 col-12">
+                <img src="./imgs/cpsc581/p1/sketch04.JPG" class="img-fluid rounded" width="300">
+                <br>
+                <br>
+                <img src="./imgs/cpsc581/p1/sketch06.JPG" class="img-fluid rounded">
+                <br>
+                <br>
+                <img src="./imgs/cpsc581/p1/sketch08.JPG" class="img-fluid rounded">
+              </div>
+
+            </div>
+
+            <br>
+            <br>
+
+            <!-- Refinement -->
+            <h4>Further Sketching and Iteration:</h4>
+            <div class="row">
+
+
+              <div class="col col-md-6 col-12">
+                <p> After we had generated a lot of different ideas, we met as a group early on to discuss the ideas we wanted to move forward with. We decided to move forward with a compass-based idea for the sensor project and music note tapping-based idea for the second project. Here are some of the sketches from this stage: </p>
+
+
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/sketch09.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Me) </figcaption>
+                </figure>
+                <br>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/sketch10.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Me) </figcaption>
+                </figure>
+                <br>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/sketch12.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Me)</figcaption>
+                </figure>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/michaelasketch03.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
+                </figure>
+                <br>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/michaelasketch04.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
+                </figure>
+                <br>
+                <br>
+
+              </div>
+
+              <div class="col col-md-6 col-12">
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/andiesketch01.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Andie)</figcaption>
+                </figure>
+                <br>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/andiesketch02.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Andie)</figcaption>
+                </figure>
+                <br>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/michaelasketch01.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
+                </figure>
+                <br>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/michaelasketch02.JPG" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
+                </figure>
+                <br>
+                <br>
+
+
+
+              </div>
+
+            </div>
+
+            <br>
+            <br>
+
+            <!-- Refinement -->
+            <h4>Implementation:</h4>
+
+
+            <br>
+
+            <div class="row">
+              <div class="col col-md-6 col-12">
+
+                <p> After receiving some feedback from the class and brainstorming different iterations, we decided to go with an palette and spinning brush idea, and a falling music note idea. The final implementation of these can be seen below. To get the final iterations, there were a lot of design decisions that had to be made. For the music app, we decided to have unique symbols and colors with little similarities so that users could easily distinguish them. For the artboard app, we wanted it to be clear which symbols were being chosen which is why we decided to both highlight the color and point to it with the brush in the centre.
+                <br>
+                <br>
+                For implmenting this project, I largely worked on programming the brush movement and animation, and the working with the iPhone sensors to move the brush accordingly. I also programmed the logic behind the color choosing and password system.
+
+
+ </p>
+              </div>
+
+              <div class="col col-md-6 col-12">
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p0/sketchAhmad.jpg" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Ahmad)</figcaption>
+                </figure>
+              </div>
+            </div>
+
+            <!-- <div class="row">
+              <div class="col col-md-6 col-12">
+
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p0/screen1.png" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Scene 1)</figcaption>
+                </figure>
+              </div>
+
+              <div class="col col-md-6 col-12">
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p0/screen2.png" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Scene 1)</figcaption>
+                </figure>
+              </div>
+
+            </div> -->
+
+
+            <br>
+
+            <h4> Video Demonstration: </h4>
+
+            <div class="d-flex justify-content-center align-items-center">
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/7ZrnEkUIJPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+
+
+
+
+
+
+
+          </div>
+          <div class="modal-footer">
+            <!-- Button opens new page showing repository -->
+            <a class="btn btn-secondary"href="https://drive.google.com/file/d/1WffXnfhrfKgr9-WLdjpNpfqMFg-CpRUN/view" target="_blank"> Download the Project</a>
+            <a class="btn btn-secondary"href="https://github.com/olsakova/phone_unlock" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
 
