--- a/CPSC581.html
+++ b/CPSC581.html
@@ -185,7 +185,7 @@
               </div>
 
               <div class="col col-md-8 col-12">
-                <img src="./imgs/cpsc581/p0/sketch01.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch01.jpg" class="img-fluid rounded">
               </div>
 
 
@@ -196,14 +196,14 @@
 
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch02.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch02.jpg" class="img-fluid rounded">
               </div>
               <!-- <div class="col col-md-3 col-12">
                 <img src="./imgs/cpsc581/p0/sketch07.jpg" class="img-fluid rounded">
               </div> -->
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p0/sketch04.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p0/sketch04.jpg" class="img-fluid rounded">
               </div>
 
             </div>
@@ -222,7 +222,7 @@
 
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketch06.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p0/sketch06.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> For this idea, I wanted to have a graphical representation of Homer, that would respond to the beer bottle / donut from being interacted with. The bottle or donut would be clicked and Homer would respond with a phrase depending on how much had been clicked so far. </figcaption>
                 </figure>
                 <br>
@@ -237,7 +237,7 @@
 
               <div class="col col-md-6 col-12">
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketch05.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p0/sketch05.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> This was an idea I had for a more simplistic representation, with the center donut being the only interaction. Once clicked, more donuts would appear below (using physics effects to have them move around). As the mountain of donuts grew, Homer's phrases would sound off at different times.</figcaption>
                 </figure>
                 <br>
@@ -360,11 +360,11 @@
                 <h4>Initial Sketches:</h4>
                 <p>     Just as in project 0, for this project we started with every group member sketching 10 different ideas for creative ways to unlock your phone. We had to think of ideas that would work by touching the phone and ones that would work using the sensors on the device. My initial designs can be seen here.  </p>
 
-                <img src="./imgs/cpsc581/p1/sketch02.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p1/sketch02.jpg" class="img-fluid rounded">
               </div>
 
               <div class="col col-md-7 col-12">
-                <img src="./imgs/cpsc581/p1/sketch01.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p1/sketch01.jpg" class="img-fluid rounded">
               </div>
 
 
@@ -375,23 +375,23 @@
 
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p1/sketch03.JPG" class=" figure-img img-fluid rounded" width="300">
+                <img src="./imgs/cpsc581/p1/sketch03.jpg" class=" figure-img img-fluid rounded" width="300">
                 <br>
                 <br>
-                <img src="./imgs/cpsc581/p1/sketch05.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p1/sketch05.jpg" class="img-fluid rounded">
                 <br>
                 <br>
-                <img src="./imgs/cpsc581/p1/sketch07.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p1/sketch07.jpg" class="img-fluid rounded">
               </div>
 
               <div class="col col-md-6 col-12">
-                <img src="./imgs/cpsc581/p1/sketch04.JPG" class="img-fluid rounded" width="300">
+                <img src="./imgs/cpsc581/p1/sketch04.jpg" class="img-fluid rounded" width="300">
                 <br>
                 <br>
-                <img src="./imgs/cpsc581/p1/sketch06.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p1/sketch06.jpg" class="img-fluid rounded">
                 <br>
                 <br>
-                <img src="./imgs/cpsc581/p1/sketch08.JPG" class="img-fluid rounded">
+                <img src="./imgs/cpsc581/p1/sketch08.jpg" class="img-fluid rounded">
               </div>
 
             </div>
@@ -410,34 +410,41 @@
 
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/sketch09.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/sketch09.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Me) </figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/sketch10.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/sketch10.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Me) </figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/sketch12.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/sketch12.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Me)</figcaption>
                 </figure>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/michaelasketch03.JPG" class="figure-img img-fluid rounded">
-                  <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
+                  <img src="./imgs/cpsc581/p1/ahmadsketch01.jpg" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Ahmad)</figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/michaelasketch04.JPG" class="figure-img img-fluid rounded">
-                  <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
+                  <img src="./imgs/cpsc581/p1/ahmadsketch02.jpg" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Ahmad)</figcaption>
+                </figure>
+                <br>
+                <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/ahmadsketch03.jpg" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Ahmad)</figcaption>
                 </figure>
                 <br>
                 <br>
@@ -446,32 +453,38 @@
 
               <div class="col col-md-6 col-12">
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/andiesketch01.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/andiesketch01.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Andie)</figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/andiesketch02.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/andiesketch02.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Andie)</figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/michaelasketch01.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/michaelasketch01.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
                 </figure>
                 <br>
                 <br>
 
                 <figure class="figure">
-                  <img src="./imgs/cpsc581/p1/michaelasketch02.JPG" class="figure-img img-fluid rounded">
+                  <img src="./imgs/cpsc581/p1/michaelasketch02.jpg" class="figure-img img-fluid rounded">
                   <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
                 </figure>
                 <br>
                 <br>
+
+                <figure class="figure">
+                  <img src="./imgs/cpsc581/p1/michaelasketch04.jpg" class="figure-img img-fluid rounded">
+                  <figcaption class="figure-caption"> (Sketch by Michaela)</figcaption>
+                </figure>
+
 
 
 
