--- a/CPSC581.html
+++ b/CPSC581.html
@@ -502,51 +502,41 @@
             <br>
 
             <div class="row">
-              <div class="col col-md-6 col-12">
+              <div class="col col-md-12 col-12">
 
                 <p> After receiving some feedback from the class and brainstorming different iterations, we decided to go with an palette and spinning brush idea, and a falling music note idea. The final implementation of these can be seen below. To get the final iterations, there were a lot of design decisions that had to be made. For the music app, we decided to have unique symbols and colors with little similarities so that users could easily distinguish them. For the artboard app, we wanted it to be clear which symbols were being chosen which is why we decided to both highlight the color and point to it with the brush in the centre.
                 <br>
                 <br>
-                For implmenting this project, I largely worked on programming the brush movement and animation, and the working with the iPhone sensors to move the brush accordingly. I also programmed the logic behind the color choosing and password system.
+                For implementing this project, I largely worked on programming the brush movement and animation, and the working with the iPhone sensors to move the brush accordingly. I also programmed the logic behind the color choosing and password system.
 
 
  </p>
-              </div>
+        </div>
 
-              <div class="col col-md-6 col-12">
-                <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/sketchAhmad.jpg" class="figure-img img-fluid rounded">
-                  <figcaption class="figure-caption"> (Sketch by Ahmad)</figcaption>
-                </figure>
-              </div>
+
+              <!-- <div class="col col-md-12 col-12"> -->
+                <!-- <figure class="figure"> -->
+                  <!-- <img src="./imgs/cpsc581/p0/sketchAhmad.jpg" class="figure-img img-fluid rounded"> -->
+                  <!-- <figcaption class="figure-caption"> (Sketch by Ahmad)</figcaption> -->
+                <!-- </figure> -->
+              <!-- </div> -->
             </div>
 
-            <!-- <div class="row">
-              <div class="col col-md-6 col-12">
 
-
-                <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/screen1.png" class="figure-img img-fluid rounded">
-                  <figcaption class="figure-caption"> (Scene 1)</figcaption>
-                </figure>
-              </div>
-
-              <div class="col col-md-6 col-12">
-                <figure class="figure">
-                  <img src="./imgs/cpsc581/p0/screen2.png" class="figure-img img-fluid rounded">
-                  <figcaption class="figure-caption"> (Scene 1)</figcaption>
-                </figure>
-              </div>
-
-            </div> -->
 
 
             <br>
 
-            <h4> Video Demonstration: </h4>
+            <h4> Video Demonstrations: </h4>
 
             <div class="d-flex justify-content-center align-items-center">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/7ZrnEkUIJPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/Va8JOBrea1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <br>
+            <br>
+
+            <div class="d-flex justify-content-center align-items-center">
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/Kdjy2oh-TSc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
 
@@ -556,14 +546,16 @@
 
 
 
-          </div>
+
+        </div>
           <div class="modal-footer">
             <!-- Button opens new page showing repository -->
-            <a class="btn btn-secondary"href="https://drive.google.com/file/d/1WffXnfhrfKgr9-WLdjpNpfqMFg-CpRUN/view" target="_blank"> Download the Project</a>
+            <!-- <a class="btn btn-secondary"href="https://drive.google.com/file/d/1WffXnfhrfKgr9-WLdjpNpfqMFg-CpRUN/view" target="_blank"> Download the Project</a> -->
             <a class="btn btn-secondary"href="https://github.com/olsakova/phone_unlock" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> See the Repository</a>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
+
       </div>
     </div>
 
